# Monster

./: .gitignore  mux.py
01/: Monster - 01 - Dialogue.ass  Monster - 01 - Signs.ass
common/ED/: ED.ass
common/OP/: OP.ass
encode/: .gitignore  01.py  README.md  config.ini  pyproject.toml
encode/monster_common/: __init__.py  common.py  sources.py
encode/monster_mini/: __init__.py  additional.py  scene.py
encode/monster_mini/encode/: arm-local.fish  arm.boost.py  arm.fish  source.py  x86.boost.py  x86.fish
encode/monster_mini/scripts/: scene-detection-source.py  scene-detection.py
